service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: v1deployservice
spec:
  
  type: NodePort
  selector:
    app: v1deploy 
  ports:
    - nodePort: 30163
      port: 8080 
      targetPort: 8080
