ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/*
        backend:
          serviceName: v1-service
          servicePort: 327050
      - path: /api/v2/*
        backend:
          serviceName: v2-service
          servicePort: 30211
